--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
@@ -34,7 +34,7 @@
                         <li><a asp-page="/Shop/ProductCategories/Index">گروه محصولات</a></li>
                         <li><a asp-page="/Shop/Products/Index">محصولات</a></li>
                         <li><a asp-page="/Shop/ProductPictures/Index">عکس محصولات</a></li>
-                        <li><a asp-page="/Comment/Comment/Index">کامنت ها</a></li>
+
                     </ul>
                 </li>
                 <li class="has_sub">
@@ -45,12 +45,15 @@
 
                     </ul>
                 </li>
+
+                <li>
+                    <a asp-page="/Comment/Comment/Index" class="waves-effect"><i class="md md-mail"></i><span> کامنت ها </span></a>
+                </li>
                 <li class="has_sub">
                     <a class="waves-effect"><i class="md md-mail"></i><span> سیستم بلاگینگ </span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
                         <li><a asp-page="/Blog/Articles/Index">مقالات</a></li>
                         <li><a asp-page="/Blog/ArticleCategories/Index">گروه مقالات</a></li>
-
                     </ul>
                 </li>
                 @*oder menu*@
