--- a/LampShade/ServiceHost/Pages/Article.cshtml
+++ b/LampShade/ServiceHost/Pages/Article.cshtml
@@ -137,92 +137,36 @@
                                     =============================================-->
 
                                     <div class="comment-section">
-                                        <h3 class="comment-counter">4 COMMENTS</h3>
+                                        <h3 class="comment-counter">نظرات (@Model.Article.Comments.Count)</h3>
 
                                         <!--=======  comment container  =======-->
 
                                         <div class="comment-container">
                                             <!--=======  single comment  =======-->
+                                            @foreach(var Comment in @Model.Article.Comments)
+                                            { 
+                                                <div class="single-comment">
+                                                    <span class="reply-btn">
+                                                        <a href="#" onclick="">پاسخ</a>
+                                                    </span>
 
-                                            <div class="single-comment">
-                                                <span class="reply-btn">
-                                                    <a href="#">Reply</a>
-                                                </span>
+                                                    <div class="image">
+                                                        <img src="~/Theme/assets/img/usericon.png" height="50" width="50" alt="@Model.Article.Title" title="@Model.Article.Title">
+                                                    </div>
+                                                    <div class="content">
+                                                        <h3 class="user">
+                                                            @Comment.Name <span class="comment-time">
+                                                               @Comment.CreationDate
+                                                            </span>
+                                                        </h3>
+                                                        <p class="comment-text">@Comment.Message</p>
+                                                    </div>
 
-                                                <div class="image">
-                                                    <img src="assets/img/blog/comment-icon.png" alt="">
                                                 </div>
-                                                <div class="content">
-                                                    <h3 class="user">
-                                                        admin <span class="comment-time">
-                                                            April 28, 2019
-                                                            at 3:09 am
-                                                        </span>
-                                                    </h3>
-                                                    <p class="comment-text">
-                                                        Lorem ipsum dolor sit amet consectetur
-                                                        adipisicing elit. Sint quia rem dolorem et rerum est
-                                                        laudantium eum dolores omnis perspiciatis.
-                                                    </p>
-                                                </div>
+                                            }
+                                          
 
-                                            </div>
-
-                                            <!--=======  End of single comment  =======-->
-                                            <!--=======  single reply comment  =======-->
-
-                                            <div class="single-comment reply-comment">
-                                                <span class="reply-btn">
-                                                    <a href="#">Reply</a>
-                                                </span>
-
-                                                <div class="image">
-                                                    <img src="assets/img/blog/comment-icon.png" alt="">
-                                                </div>
-                                                <div class="content">
-                                                    <h3 class="user">
-                                                        admin <span class="comment-time">
-                                                            April 28, 2019
-                                                            at 3:09 am
-                                                        </span>
-                                                    </h3>
-                                                    <p class="comment-text">
-                                                        Lorem ipsum dolor sit amet consectetur
-                                                        adipisicing elit. Sint quia rem dolorem et rerum est
-                                                        laudantium eum dolores omnis perspiciatis.
-                                                    </p>
-                                                </div>
-
-                                            </div>
-
-                                            <!--=======  End of single reply comment  =======-->
-                                            <!--=======  single comment  =======-->
-
-                                            <div class="single-comment">
-                                                <span class="reply-btn">
-                                                    <a href="#">Reply</a>
-                                                </span>
-
-                                                <div class="image">
-                                                    <img src="assets/img/blog/comment-icon.png" alt="">
-                                                </div>
-                                                <div class="content">
-                                                    <h3 class="user">
-                                                        admin <span class="comment-time">
-                                                            April 28, 2019
-                                                            at 3:09 am
-                                                        </span>
-                                                    </h3>
-                                                    <p class="comment-text">
-                                                        Lorem ipsum dolor sit amet consectetur
-                                                        adipisicing elit. Sint quia rem dolorem et rerum est
-                                                        laudantium eum dolores omnis perspiciatis.
-                                                    </p>
-                                                </div>
-
-                                            </div>
-
-                                            <!--=======  End of single comment  =======-->
+                                            
 
 
                                         </div>
