--- a/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Index.cshtml
@@ -91,8 +91,12 @@
                                     <td>@item.CreationDate</td>
                                     <td>
                                         <a class="btn btn-warning btn-default waves-effect waves-light m-b-5"
-                                          asp-page="Edit" asp-route-Id="@item.Id">
+                                           asp-page="Edit" asp-route-Id="@item.Id">
                                             <i class="fa fa-edit"></i> ویرایش
+                                        </a>
+                                        <a class="btn btn-pink btn-default waves-effect waves-light m-b-5"
+                                           asp-page="Permission" asp-route-Id="@item.Id">
+                                            <i class="fa fa-edit"></i>دسترسی ها
                                         </a>
                                         <a class="btn btn-primary btn-default waves-effect waves-light m-b-5"
                                            href="#showmodal=@Url.Page("./Index", "ChangePassword", new {id = @item.Id})">
